package org.acme.persistence;

import jakarta.persistence.*;
import java.math.BigDecimal;

/**
 * JPA Entity representing a product in the database.
 * *
 * <p>
 * Pedagogical points:
 * <ul>
 * <li>Focuses exclusively on persistence mapping (ORM).</li>
 * <li>Contains no business logic; business invariants are handled by the Domain
 * layer.</li>
 * <li>Uses a technical auto-generated ID as the Primary Key, while SKU remains
 * a unique business key.</li>
 * </ul>
 */
@Entity
@Table(name = "products")
public class ProductEntity {

    /**
     * Technical Primary Key.
     * Auto-generated by the database to ensure efficient indexing and joins.
     */
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    /**
     * Business identifier (Stock Keeping Unit).
     * Must be unique and non-nullable at the database level.
     */
    @Column(unique = true, nullable = false)
    private String sku;

    @Column(nullable = false)
    private String name;

    @Column(nullable = false)
    private BigDecimal price;

    @Column(nullable = false)
    private int stock;

    // -------------------------------
    // Constructors
    // -------------------------------

    /**
     * Default constructor required by the JPA specification.
     */
    public ProductEntity() {
    }

    /**
     * Convenience constructor for entity instantiation within the Mapper.
     */
    public ProductEntity(String sku, String name, BigDecimal price, int stock) {
        this.sku = sku;
        this.name = name;
        this.price = price;
        this.stock = stock;
    }

    // -------------------------------
    // Getters / Setters
    // -------------------------------

    public Long getId() {
        return id;
    }

    public String getSku() {
        return sku;
    }

    public void setSku(String sku) {
        this.sku = sku;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public BigDecimal getPrice() {
        return price;
    }

    public void setPrice(BigDecimal price) {
        this.price = price;
    }

    public int getStock() {
        return stock;
    }

    public void setStock(int stock) {
        this.stock = stock;
    }
}
