@startuml
title Product Catalog — Domain & Infrastructure Class Diagram

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #EEF3FF
  BorderColor #3366CC
  FontSize 12
}
skinparam note {
  BackgroundColor #FFFDE7
  BorderColor #F9A825
}

package "domain" #F3F3F3 {
  class Product {
    - String sku
    - String name
    - BigDecimal price
    - int stock
    --
    + withName(String) : Product
    + withPrice(BigDecimal) : Product
    + withStock(int) : Product
    + isInStock() : boolean
  }
  note right of Product
    Immutable aggregate root.
    No framework imports.
    Mutations return new instances.
  end note
}

package "application" #F3F3F3 {
  class ProductService {
    + create(CreateProductRequest) : ProductDTO
    + findBySku(String) : Optional<ProductDTO>
    + findAll() : List<ProductDTO>
    + delete(String) : void
  }
  class ProductDTO {
    + String sku
    + String name
    + BigDecimal price
    + int stock
  }
  class CreateProductRequest {
    + @NotBlank String sku
    + @NotBlank String name
    + @Positive BigDecimal price
    + @PositiveOrZero int stock
  }
}

package "infrastructure.persistence" #F3F3F3 {
  class ProductEntity {
    + @Id Long id
    + @Version Long version
    + String sku
    + String name
    + BigDecimal price
    + int stock
  }
  class ProductRepository {
    + findBySku(String) : Optional<ProductEntity>
    + persist(ProductEntity) : void
    + listAll() : List<ProductEntity>
    + deleteById(Long) : boolean
  }
  class ProductMapper {
    + toDto(ProductEntity) : ProductDTO
    + toEntity(CreateProductRequest) : ProductEntity
  }
}

ProductService --> ProductDTO : returns
ProductService --> CreateProductRequest : accepts
ProductService --> ProductRepository : uses
ProductService ..> Product : applies rules
ProductRepository --> ProductEntity : manages
ProductMapper ..> ProductDTO : produces
ProductMapper ..> ProductEntity : produces
ProductMapper ..> Product : validates via

note bottom of ProductEntity
  @Version prevents lost updates.
  Distinct from domain Product —
  never crosses the service boundary.
end note
@enduml
